# ORBIT

./: .buildinfo  .git-blame-ignore-revs  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  atlantic_tx_base_case.ipynb  aubryn.ipynb  bycap_bydist.ipynb  cable_comparison.ipynb  conftest.py  contents.html  define_configs.ipynb  dev.ipynb  export_runs.ipynb  genindex.html  gut_check_runs.ipynb  hvdc_comparison.ipynb  index.html  mooring_research.ipynb  objects.inv  oss_component_breakdown.ipynb  osw_project_details.xlsx  param_model.ipynb  py-modindex.html  pyproject.toml  pytest.ini  readthedocs.yaml  search.html  searchindex.js  setup.cfg  setup.py  supply_chain.ipynb  test_HVDC.ipynb  tset.py  versioneer.py
.github/workflows/: gh_pages.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  tests.yml
Analysis/: Case Study #1.ipynb
ORBIT/: __init__.py  _defaults.py  _version.py  config.py  library.py  manager.py  parametric.py  supply_chain.py
ORBIT/api/: wisdem.py
ORBIT/core/: __init__.py  _defaults.py  cargo.py  components.py  environment.py  exceptions.py  library.py  port.py  supply_chain.py  vessel.py
ORBIT/phases/: __init__.py  base.py
ORBIT/simulation/: __init__.py  environment.py  exceptions.py  port.py  vessel_storage.py
ORBIT/ui/: __init__.py  app.py  config.py  exec.py  launch.py  layout.py  load.py  module.py  phase.py  run.py  weather.py
ORBIT/vessels/: __init__.py  base.py
_sources/: contents.rst.txt  index.rst.txt
_sources/source/: api_DesignPhase.rst.txt  api_ParametricManager.rst.txt  api_ProjectManager.rst.txt  changelog.rst.txt  doc_CommonCost.rst.txt  doc_InstallPhase.rst.txt  doc_ParametricManager.rst.txt  doc_ProjectManager.rst.txt  examples.rst.txt  methods.rst.txt  team.rst.txt
_static/: basic.css  documentation_options.js
docs/: 3.2  api.rst  conf.py  contents.rst  index.rst  methods.rst  team.rst
docs/_docs/: api_DesignPhase.rst  api_InstallPhase.rst  doc_DesignPhase.rst  doc_InstallPhase.rst
docs/_templates/: class.rst  class_without_init.rst
docs/intro/: index.rst  overview.rst
docs/publications/: index.rst
docs/source/: api.rst  api_DesignPhase.rst  api_InstallPhase.rst  changelog.rst  doc_DesignPhase.rst  doc_InstallPhase.rst  doc_ProjectManager.rst  examples.rst  methods.rst
docs/tutorial/: define_vessels.rst  phase_specific.rst
examples/: 1. Example Fixed Project.ipynb  1. Introduction.ipynb  2. Example Floating Project.ipynb  2. Installation Modules.ipynb  3. ProjectManager Introduction.ipynb  4. Example Fixed Project.ipynb  5. Example Floating Project-SemiTaut.ipynb  5. Example Floating Project.ipynb  DMH-Example-Sensitivity Analysis.ipynb  Example - Cable Install Configurations.ipynb  Example - Cash Flow.ipynb  Example - Custom Array Layout.ipynb  Example - Custom Semisubmersible.ipynb  Example - Dependent Phases.ipynb  Example - Modifying Library Assets.ipynb  Example - Parametric Manager.ipynb  Example - Using HVDC or HVAC.ipynb  Example - Using Monopile or GBF Intallation.ipynb  Untitled.ipynb  cost_curves.ipynb  custom_array_layout.ipynb  example_floating_project.yaml  gbf_no_wtiv_case_gbf_install.csv  gbf_with_wtiv_case_gbf_install.csv  gbf_with_wtiv_case_turbine_install.csv  monopile_case_monopile_install.csv  monopile_case_turbine_install.csv  nrwal.yaml  supply_chain_dev.ipynb
examples/Standard_Mooring/: StandardMooring.ipynb  plot_supply_chain.py
examples/configs/: custom_floating_project.yaml  example_fixed_project.yaml  example_floating_project.yaml  example_floating_project_SemiTaut.yaml  example_gravity-based_intallation_no_wtiv.yaml  example_gravity-based_intallation_with_wtiv.yaml  example_gravity-based_project.yaml  example_monopile_intallation.yaml
examples/install_sequences/: gbf_no_wtiv_case_gbf_install.csv  gbf_no_wtiv_case_turbine_install.csv  gbf_with_wtiv_case_gbf_install.csv  gbf_with_wtiv_case_turbine_install.csv  monopile_case_monopile_install.csv  monopile_case_turbine_install.csv
examples/results/: df_display.csv
misc/: supply_chain.ipynb  supply_chain_plots.py  supply_chain_project.yaml
pip-wheel-metadata/ORBIT.dist-info/: LICENSE  METADATA  top_level.txt
shared_transmission_configs/: Atlantic Shores Offshore Wind 1 base.yaml  Atlantic Shores Offshore Wind 2 base.yaml  Bay State Wind base.yaml  Beacon Wind base.yaml  CVOW Commercial base.yaml  Empire Wind 2 base.yaml  Empire Wind base.yaml  Garden State Offshore Energy base.yaml  Hudson North WEA base.yaml  Hudson South WEA base.yaml  Kitty Hawk base.yaml  Liberty Wind base.yaml  MarWin base.yaml  Mayflower Res base.yaml  Mayflower Wind 1 base.yaml  Mayflower Wind 2 base.yaml  Momentum Wind base.yaml  Ocean Wind 1 base.yaml  Ocean Wind 2 base.yaml  Ocean Wind Res base.yaml  Park City Wind base.yaml  Revolution Wind (CT) base.yaml  Revolution Wind (RI) base.yaml  Skipjack base.yaml  South Fork base.yaml  Sunrise Wind base.yaml  TBD SC Lease base.yaml  Untitled.ipynb  Vineyard Wind South base.yaml  Vineyard Wind base.yaml  nan base.yaml
source/: api.html  api_DesignPhase.html  api_InstallPhase.html  api_ParametricManager.html  api_ProjectManager.html  changelog.html  doc_CommonCost.html  doc_DesignPhase.html  doc_InstallPhase.html  doc_ParametricManager.html  doc_ProjectManager.html  examples.html  methods.html  team.html
source/installation/: index.html
source/intro/: bos.html  index.html  overview.html
source/publications/: index.html
source/tutorial/: available_outputs.html  define_vessels.html  design_phases.html  index.html  load_config.html  parametric_manager.html  phase_specific.html  project_manager.html  start_dates.html
templates/: design_module.py
tests/: __init__.py  conftest.py  test_config_management.py  test_design_install_phase_interactions.py  test_library.py  test_parametric.py  test_project_manager.py
tests/api/: test_fixed_wisdem_api.py  test_wisdem_api.py
tests/core/: test_environment.py  test_library.py  test_port.py
tests/data/: __init__.py  test_weather.csv
tests/phases/: __init__.py  test_base.py
tests/simulation/: test_port.py  (+3 more)
(+286 files in other folders)
